Add basic html structure to index file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>Lab2 MGP</title>
+	</head>
+	<body>
+		<header>
+			Enter your information
+		</header>
+	</body>
+</html>
 
