Add link to css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Lab2 MGP</title>
+		<link rel="stylesheet" media="screen" href="css/reset.css" />
+		<link rel="stylesheet" media="screen" href="css/screen.css" />
 	</head>
 	<body>
 		<header>
