Add h1 tag to header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			Enter your information
+			<h1>Enter your information</h1>
 		</header>
 		<form>
 			<input></input>
