Add proper attributes for form

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<h1>Enter your information</h1>
 		</header>
-		<form>
+		<form method="POST" autocomplete="on" action="#null">
 			<ul>
 				<li>
 					<input></input>
