fix input element

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 		<form method="POST" autocomplete="on" action="#null">
 			<ul>
 				<li>
-					<label>E-mail Address: <input type="email" name="email_field" placeholder="email"></input></label>
+					<label>E-mail Address: <input type="email" name="email_field" placeholder="email" /></label>
 				</li>
 				<li>
-					<label>Phone Number: <input type="tel" name="phone_field" placeholder="phone number"></input></label>
+					<label>Phone Number: <input type="tel" name="phone_field" placeholder="phone number" /></label>
 				</li>
 				<li>
-					<label>Date Of Birth: <input type="date" name="dob_field" placeholder="date of birth"></input></label>
+					<label>Date Of Birth: <input type="date" name="dob_field" placeholder="date of birth" /></label>
 				</li>
 			</ul>
 		</form>
