--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Lab2 MGP</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
 		<link rel="stylesheet" media="screen" href="css/reset.css" />
 		<link rel="stylesheet" media="screen" href="css/screen.css" />
+		<title>Lab2 MGP</title>
 	</head>
 	<body>
 		<header>
