Add semantic div sections and add a button element

--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="nojs">
 	<head>
+		<title>Lab 2</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
 		<link rel="stylesheet" media="screen" href="css/reset.css" />
 		<link rel="stylesheet" media="screen" href="css/screen.css" />
-		<title>Lab2 MGP</title>
 	</head>
 	<body>
 		<header>
 			<h1>Enter your information</h1>
 		</header>
 		<form method="POST" autocomplete="on" action="#null">
-			<label>E-mail Address: <input type="email" name="email_field" placeholder="email" /></label>
-			<label>Phone Number: <input type="tel" name="phone_field" placeholder="phone number" /></label>
-			<label>Date Of Birth: <input type="date" name="dob_field" placeholder="date of birth" /></label>
+			<div>
+				<label>E-mail Address: <input type="email" name="email_field" placeholder="email" /></label>
+				<label>Phone Number: <input type="tel" name="phone_field" placeholder="phone number" /></label>
+				<label>Date Of Birth: <input type="date" name="dob_field" placeholder="date of birth" /></label>
+			</div>
+			<div>
+				<button type="submit">Submit</button>
+			</div>
 		</form>
 	</body>
 </html>
