Add media screen query and style for input boxes

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 			<h1>Enter your information</h1>
 		</header>
 		<form method="POST" autocomplete="on" action="#null">
-			<div>
+			<div id="input_boxes">
 				<label>E-mail Address: <input type="email" name="email_field" placeholder="email" /></label>
+			</div>
+			<div id="input_boxes">
 				<label>Phone Number: <input type="tel" name="phone_field" placeholder="phone number" /></label>
+			</div>
+			<div id="input_boxes">
 				<label>Date Of Birth: <input type="date" name="dob_field" placeholder="date of birth" /></label>
 			</div>
 			<div>
