Add padding for div element and button element

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div id="input_boxes">
 				<label>Date Of Birth: <input type="date" name="dob_field" placeholder="date of birth" /></label>
 			</div>
-			<div>
+			<div id="submit_btn">
 				<button type="submit">Submit</button>
 			</div>
 		</form>
