--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 			<div id="input_boxes">
 				<label>E-mail Address: <input type="email" name="email_field" placeholder="email" /></label>
 				<label>Phone Number: <input type="tel" name="phone_field" placeholder="phone number" /></label>
-				<label>Date Of Birth: <input type="date" name="dob_field" placeholder="date of birth" /></label>
+				<label>Date Of Birth: <input type="date" name="dob_field" /></label>
+			</div>
 			<div id="submit_btn">
 				<button type="submit">Submit</button>
 			</div>
